<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/wait_connect_time"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/setting_com_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="number"
            android:maxLength="2"
            android:paddingTop="15dp"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/public_network_ip"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <cn.desert.newpos.payui.setting.view.IPEditText
            android:id="@+id/setting_com_public_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/public_network_port"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/setting_com_public_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="number"
            android:maxLength="6"
            android:paddingTop="15dp"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_termID_comm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_ter_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/terminal_id"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/merchant_tid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="textCapCharacters"
            android:maxLength="8"
            android:paddingTop="15dp"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/merchant_name"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/merchant_name"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:layout_marginRight="10dp"
            android:maxLength="32"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/title_nii"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/setting_com_nii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="number"
            android:maxLength="3"
            android:paddingTop="15dp"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/on_tls"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/tls"
                android:background="@android:color/transparent"
                android:src="@drawable/home2_setting_next"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/delete_rev"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/setting_rev"
                android:background="@android:color/transparent"
                android:src="@drawable/home2_setting_next"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/trans_sys_para"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/setting_com_intentos_de_conex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="number"
            android:maxLength="6"
            android:paddingTop="15dp"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/timeout_resp"
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/setting_com_timeout_resp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="number"
            android:maxLength="2"
            android:paddingTop="15dp"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>