<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_edit_datos"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/setting_edit_datos"
        android:layout_width="300dp"
        android:layout_height="410dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_below="@+id/toolbar"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/spinnerData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:layout_below="@+id/setting_edit_datos"
        android:background="#eeeeee"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/data_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_shape"
            android:backgroundTint="@color/red"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="20dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/data_confirm"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_shape"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>
</RelativeLayout>